# build

./: .cirrus.yml  .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.adoc  CONTRIBUTING.rst  Jambase  Jamfile  Jamroot.jam  Jamrules  Makefile  README.adoc  README.rst  TODO.txt  acc-tools.jam  allyourbase.jam  appveyor.yml  architecture.html  azure-pipelines.yml  bison.jam  boost-base.jam  boost-build.jam  boost_build_v2.html  boostbook.jam  bootstrap.bat  bootstrap.jam  bootstrap.sh  bootstrap_vms.com  borland-tools.html  borland-tools.jam  borland.jam  build-logs-index.shtml  build-logs.pl  build-system.jam  build_system.htm  (+56 more)
.ci/: azp-linux--test-container.yml  azp-linux-asan-test.yml  azp-linux-prep-container.yml  azp-linux-sanitizer-test.yml  azp-linux-test.yml  azp-macos-extra.yml  azp-macos-test.yml  azp-windows-test.yml  b2_example.sh  linux-cxx-install.sh  macos-build.sh  macos-install.sh  macos-test.sh
.github/: dependabot.yml  pull_request_template.md  stale.yml
CMake/: BoostConfig.cmake  BoostCore.cmake  BoostDocs.cmake  BoostTesting.cmake  BoostUtils.cmake  CMakeLists.txt
CMake/LinkTest/: CMakeLists.txt
debian/: boost-build.docs
doc/: Jamfile.v2  architecture.html  bjam.qbk  boost-build.jam  boostbook.css  development_plan.html  examples.qbk  extending.html  jamfile.jam  recipes.html  tools.html  tracker.html  userman.xml
example/: user-config.jam
examples-v2/: boost-build.jam
jam_src/: Jam.html  Jambase  Jambase.html  Jamfile  README  RELNOTES  boost-jam.spec  build.bat  build.jam  build.sh  builtins.c  builtins.h  class.c  command.c  compile.c  compile.h  execnt.c  execunix.c  expand.c  expand.h  filemac.c  filent.c  filesys.c  filesys.h  fileunix.c  filevms.c  frames.h  hash.c  hash.h  hdrmacro.c  headers.c  index.html  jam.c  jam.h  jambase.c  jamgram.c  jamgram.h  jamgram.y  jamgram.yy  jamgramtab.h  (+34 more)
kernel/: bootstrap.jam  modules.jam
new/: alias.jam  assert.jam  boost-build.jam  boostbook.jam  borland.jam  build-request.jam  build-system.jam  builtin.jam  class.jam  common.jam  container.jam  doc.jam  doxygen.jam  errors.jam  feature.jam  fop.jam  gcc.jam  generators.jam  indirect.jam  kylix.jam  lex.jam  m2-transformations.txt  make.jam  modifiers.jam  modules.jam  msvc.jam  numbers.jam  os.jam  os.path.jam  path.jam  prebuilt.jam  print.jam  project-root.jam  project-roots.jam  project.jam  property-set.jam  property.jam  qt.jam  regex.jam  scanner.jam  (+15 more)
notes/: README.txt  build_dir_option.txt  changes.txt  hacking.txt  relative_source_paths.txt  release_procedure.txt
scripts/: nightly.sh  roll.sh
server/: README.md  gulpfile.js  index.js  package.json
src/: build-system.jam  build_system.py  interpreter.py  manager.py
test/: BoostBuild.py  Jamfile  MockToolset.py  README.adoc  TestCmd.py  TestToolset.py  abs_workdir.py  absolute_sources.py  alias.py  alternatives.py  always.py  assert-equal.jam  assert.py  bad_dirname.py  boost-build.jam  boost_build_system.py  boostbook.py  build_dir.py  build_file.py  build_no.py  build_system_test.py  build_system_test_core.py  build_system_test_utils.py  builtin_glob.py  builtin_glob_archive.py  builtin_readlink.py  builtin_split_by_characters.py  bzip2.py  c_file.py  chain.py  check-arguments.jam  check-bindrule.jam  check-jam-patches.jam  check-test-tools.jam  clean.py  cli_property_expansion.py  collect_debug_info.py  command_line_properties.py  conditionals.py  conditionals2.py  (+168 more)
tools/: bison.jam  boostbook.jam  borland.jam  darwin.jam  doxygen.jam  gcc.jam  gettext.jam  msvc.jam  qt.jam  stlport.jam  sun.jam  xsltproc.jam
v1/: Jambase  TODO.txt  acc-tools.jam  allyourbase.jam  boost-base.jam  bootstrap.jam  borland-5.5.1-tools.jam  borland-5.6.4-tools.jam  borland-5_5_1-tools.jam  borland-5_6_4-tools.jam  borland-5_8_2-tools.jam  borland-tools.html  borland-tools.jam  build_system.htm  como-4_3_3-vc7-tools.jam  como-4_3_3-vc7_1-tools.jam  como-tools.html  como-tools.jam  como-win32-4.3.3-vc7-tools.jam  como-win32-4.3.3-vc7.1-tools.jam  como-win32-tools.jam  cw-8.3-tools.jam  cw-9_3-tools.jam  cw-tools.html  cw-tools.jam  cwpro8-tools.html  cwpro8-tools.jam  cwpro9-tools.html  cwpro9-tools.jam  darwin-tools.html  darwin-tools.jam  distribution.jam  dmc-stlport-tools.html  dmc-stlport-tools.jam  dmc-tools.html  dmc-tools.jam  edg-tools.html  (+84 more)
(+1419 files in other folders)
